# plonkish_basefold

./: .gitignore  README.md
plonkish/: Cargo.toml  README.md
plonkish/benchmark/: Cargo.toml
plonkish/benchmark/bench_data/pcs/: commit_basefold256  open_basefold256  size_basefold256  verify_basefold256
plonkish/benchmark/benches/: #BasefoldParams.rs#  BasefoldParams.rs~  basefold_proof_system.rs  basefold_proof_system.rs~  blaze_bench.rs  brakedown_proof_system.rs  brakedown_proof_system.rs~  pcs_bench.rs  pcs_bench.rs~  proof_system.rs  proof_system.rs~  zeromorph_fri_proof_system.rs  zeromorph_fri_proof_system.rs~
plonkish/benchmark/src/: BasefoldParams.rs  BasefoldParams.rs~  lib.rs
plonkish/plonkish_backend/: Cargo.toml  Cargo.toml~
plonkish/plonkish_backend/src/: lib.rs  pcs.rs  util.rs
plonkish/plonkish_backend/src/backend/: hyperplonk.rs  hyperplonk.rs~
plonkish/plonkish_backend/src/backend/hyperplonk/: #prover.rs#  preprocessor.rs  util.rs
plonkish/plonkish_backend/src/pcs/: multilinear.rs  multilinear.rs~  univariate.rs
plonkish/plonkish_backend/src/pcs/multilinear/: blaze.rs  (+7 more)
plonkish/plonkish_backend/src/poly/: multilinear.rs  univariate.rs
plonkish/plonkish_backend/src/util/: #arithmetic.rs#  #mersenne_61_mont.rs#  #new_fields.rs#  #parallel.rs#  .#mersenne_61_mont.rs  arithmetic.rs  avx_int_types.rs  binary_extension_fields.rs  blaze_transcript.rs  code.rs  ff_255.rs  ff_255.rs~  goldilocksMont.rs  goldilocksMont.rs~  hash.rs  mersenne_61_mont.rs~  new_fields.rs  new_fields.rs~  parallel.rs  play_field.rs  transcript.rs  transcript.rs~
plonkish/plonky2_util/src/: lib.rs
(+8 files in other folders)
